# HUMP

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
config/: config.h.in  config.hpp  config.hpp.in
doxyconfig/: doxyfile.ini
include/: HUMLconfig.hpp  HUMPconfig.hpp  amplinterface.hpp  common_functions.hpp  config.h  config.h.in  engagepoint.hpp  humanoid.hpp  humplanner.hpp  invertmatrix.hpp  movement.hpp  object.hpp  point.hpp  problem.hpp  scenario.hpp  target.hpp  task.hpp
src/: amplinterface.cpp  common_functions.cpp  engagepoint.cpp  humanoid.cpp  humplanner.cpp  movement.cpp  object.cpp  point.cpp  problem.cpp  scenario.cpp  target.cpp  task.cpp
test/include/: common.hpp
test/src/: common.cpp  object_tests.cpp  point_tests.cpp
